test/module/import_fixity_conflict.expected.txt
ppap> Copyright (c) 2021-2026, Kijeong Lim
ppap> All rights reserved
ppap =<< 
ppap >>= exec (Hol.main "test")
Hol =<< 
Hol> Compiling test.module.import_fixity_conflict ( test/module/import_fixity_conflict.hol, interpreted )
/home/lim/portfolio/ppap/test/module/import_fixity_conflict.hol:2:1-2:11: error: [HolBETA-ParseError]
   |            
 2 | infixl + 6.
   | ^^^^^^^^^^^
Parsing failed in `/home/lim/portfolio/ppap/test/module/import_fixity_conflict.hol'.
Fixity declaration for `+' conflicts with an imported fixity.

Hol =<< 
Hol> Ok, no module loaded.
Hol> 
Hol >>= quit
